got the backend to work

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>My Solo Project</title>
+    <link rel="stylesheet" href="./user/style.css" />
   </head>
   <body>
     <h1>Let's build this to do list</h1>
