front and back end connected

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <link rel="stylesheet" href="./user/style.css" />
   </head>
   <body>
-    <h1>Let's build this to do list</h1>
     <div id="root"></div>
 
     <!-- script for webpack and webpack-dev-server challenge -->
-    <script src="build/bundle.js"></script>
+    <!-- <script src="build/bundle.js"></script> -->
 
     <!-- uncomment below and comment out the tag above for gulp/browserify challenge -->
     <!-- <script src="build/browserify-bundle.js"></script> -->
